# ApMeshTese

./: .clang-format  .gitignore  .gitignore (cópia)  README.md  biuld-gcc.sh  run_clang_format.sh
Debug/: 1erro1.txt  2erro2.txt  (+2 more)
ap_mesh_project/: .makefileopts  CMakeLists.txt  Makefile  run_clang_format.sh
ap_mesh_project/build-ap_mesh_project_release/: Makefile
ap_mesh_project/include/: definitions.h
ap_mesh_project/include/adapter/: AdaptadorPorCurvatura.h  adapter.h
ap_mesh_project/include/crab_mesh/aft/: AdvancingFront.h  Boundary.h  Quadtree.h  QuadtreeCell.h  advancing_front.h  boundary.h  edge.h  face.h  quadtree.h  quadtree_cell.h  shape.h  vertex.h
ap_mesh_project/include/crab_mesh/numerical/: BisectionEquationRoot.h  EquationRoot.h  EquationRootFunction.h  Function.h  MultiVariableFunction.h  bisection_equation_root.h  equation_root.h  equation_root_function.h  function.h  multi_variable_function.h
ap_mesh_project/include/crab_mesh/performer/: Definitions.h  definitions.h  id_manager.h  ranged_id_manager.h
ap_mesh_project/include/curvature/: Adjacente.h  Curvatura.h  CurvaturaAnalitica.h  adjacent.h  curvature_analytical.h  curvature_discrete.h
ap_mesh_project/include/data/: Definitions.h  Edge.h  Elemento.h  Face.h  Geometria.h  Modelo.h  Noh.h  Ponto.h  Triangulo.h  Vertex.h  Vertice.h  Vetor.h  definitions.h  element_adaptive.h  geometry.h  model.h  node_adaptive.h  noh.h  point_adaptive.h  triangle_adaptive.h  vector_adaptive.h  vertex_adaptive.h
ap_mesh_project/include/data/curve/: CurvParamBezier.h  CurvParamHermite.h  Curva.h  CurvaParametrica.h  curve_adaptive.h  curve_adaptive_parametric.h  curve_adaptive_parametric_bezier.h  curve_adaptive_parametric_hermite.h
ap_mesh_project/include/data/mesh/: mesh_adaptive.h  sub_mesh.h
ap_mesh_project/include/data/patch/: BezierPatch.h  CoonsPatch.h  HermitePatch.h  Patch.h  patch.h  patch_bezier.h  patch_coons.h  patch_hermite.h
ap_mesh_project/include/data/tree/: BinTree.h  bin_tree.h
ap_mesh_project/include/estimate/: ChargeEstimateProcess.h  charge_estimate_process.h
ap_mesh_project/include/generator/: Gerador.h  GeradorAdaptativo.h  GeradorAdaptativoPorCurvatura.h  generator_adaptive.h
ap_mesh_project/include/input_output/: Arquivo.h  Modelos3d.h  PatchBezierReader.h  ReaderPatches.h  WriteOBJFile.h  file.h  models_3d.h  patch_reader.h  write_obj_file.h
ap_mesh_project/include/parallel/: Communicator.h  Definitions.h  ParallelMeshGenerator.h  TMCommunicator.h
ap_mesh_project/include/timer/: Timer.h  timer.h
ap_mesh_project/input_models/: book_nm.bp
ap_mesh_project/libs/Boost/boost/: config.hpp
ap_mesh_project/libs/Eigen/: Cholesky  CholmodSupport  Core  Dense  Eigenvalues  Geometry  Householder  IterativeLinearSolvers  Jacobi  KLUSupport  LU  MetisSupport  OrderingMethods  PaStiXSupport  PardisoSupport  QR  QtAlignedMalloc  SPQRSupport  SVD  Sparse  SparseCholesky  SparseCore  SparseLU  SparseQR  StdDeque  StdList  StdVector  SuperLUSupport  UmfPackSupport
ap_mesh_project/libs/Eigen/bench/: analyze-blocking-sizes.cpp  basicbenchmark.h  benchCholesky.cpp  bench_gemm.cpp  bench_move_semantics.cpp  bench_norm.cpp  eig33.cpp  sparse_randomsetter.cpp
ap_mesh_project/libs/Eigen/blas/: common.h  level1_cplx_impl.h  level1_impl.h  level1_real_impl.h  level3_impl.h
ap_mesh_project/output_meshes/output_1/: r1n1p24t.o277509  r1n1p34t.o277514  r1n1p4t.o277499  r1n1p6t.o277500  rainier_101.out  rainier_21.out  rainier_241.out  rainier_nivel_1_101.out  rainier_nivel_1_11.out  rainier_nivel_1_81.out  ruapehu_121.out  ruapehu_21.out  ruapehu_241.out  ruapehu_361.out  ruapehu_41.out  ruapehu_nivel_1_41.out  sant_helens_11.out  sant_helens_41.out  sant_helens_61.out  sant_helens_81.out  sant_helens_nivel_1_121.out  sant_helens_nivel_1_81.out
ap_mesh_project/qtcreator/: .gitignore  ap_mesh_project.pro
ap_mesh_project/qtcreator/debug/: callgrind.out.f101  callgrind.out.f102  callgrind.out.f103  callgrind.out.f104
ap_mesh_project/qtcreator/profile/: ap_mesh_project
ap_mesh_project/qtcreator/releaase/: ap_mesh_project
ap_mesh_project/scripts/jobs/: rai_1n1p20t.job  rai_1n1p2t.job  rai_1n1p42t.job  rai_1n1p48t.job  rai_1n1p4t.job
ap_mesh_project/scripts/srm/: job_12CPU1N.srm  job_2CPU1N.srm  job_48CPU1N.srm  job_6CPU1N.srm
ap_mesh_project/src/: main.cpp
ap_mesh_project/src/adapter/: AdaptadorPorCurvatura.cpp  adapter.cpp
ap_mesh_project/src/crab_mesh/aft/: AdvancingFront.cpp  Boundary.cpp  Quadtree.cpp  QuadtreeCell.cpp  Shape.cpp  advancing_front.cpp  boundary.cpp  edge.cpp  face.cpp  quadtree.cpp  quadtree_cell.cpp  shape.cpp  vertex.cpp
ap_mesh_project/src/crab_mesh/numerical/: BisectionEquationRoot.cpp  Function.cpp  bisection_equation_root.cpp
ap_mesh_project/src/crab_mesh/performer/: IdManager.cpp  RangedIdManager.cpp  id_manager.cpp  ranged_id_manager.cpp
ap_mesh_project/src/curvature/: Adjacente.cpp  Curvatura.cpp  CurvaturaAnalitica.cpp  CurvaturaDiscreta.cpp  adjacent.cpp  curvature_analytical.cpp  curvature_discrete.cpp
ap_mesh_project/src/data/: Definitions.cpp  Edge.cpp  Elemento.cpp  Face.cpp  Geometria.cpp  Modelo.cpp  Noh.cpp  Ponto.cpp  Triangulo.cpp  Vertex.cpp  Vertice.cpp  Vetor.cpp  definitions.cpp  element_adaptive.cpp  geometry.cpp  model.cpp  node_adaptive.cpp  noh.cpp  point_adaptive.cpp  triangle_adaptive.cpp  vector_adaptive.cpp  vertex_adaptive.cpp
ap_mesh_project/src/data/curve/: CurvParamBezier.cpp  CurvParamHermite.cpp  Curva.cpp  CurvaParametrica.cpp  curve_adaptive.cpp  curve_adaptive_parametric.cpp  curve_adaptive_parametric_bezier.cpp  (+1 more)
ap_mesh_project/src/estimate/: ChargeEstimateProcess.cpp  charge_estimate_process.cpp
ap_mesh_project/src/generator/: Gerador.cpp  GeradorAdaptativo.cpp  GeradorAdaptativoPorCurvatura.cpp  generator_adaptive.cpp
ap_mesh_project/src/input_output/: Arquivo.cpp  Modelos3d.cpp  PatchBezierReader.cpp  ReaderPatches.cpp  WriteOBJFile.cpp  file.cpp  models_3d.cpp  patch_reader.cpp  write_obj_file.cpp
ap_mesh_project/src/parallel/: ApMeshCommunicator.cpp
ap_mesh_project/src/timer/: Timer.cpp  timer.cpp
(+6879 files in other folders)
